fix: fix nav visibility

--- a/src/widgets/Weekly/styles.module.scss
+++ b/src/widgets/Weekly/styles.module.scss
@@ -140,7 +140,7 @@
   }
 
   &:last-of-type {
-    padding-right: 22px;
+    padding-left: 22px;
 
     @media (min-width: 768px) {
       padding-left: 25px;
